Fix compilation issue part2
Signed-off-by: Songkan Tang <songkant@amazon.com>